--- a/Web-Triolingo/Pages/Settings/SettingList.cshtml
+++ b/Web-Triolingo/Pages/Settings/SettingList.cshtml
@@ -45,17 +45,17 @@
                     </select>
                     <br />
                     <button type="submit" class="btn btn-primary">Thêm</button>
-                    @if (ViewData["ErrorMesageAdd"] != null)
+                    @*@if (ViewData["ErrorMesageAdd"] != null)
                     {
                         <span class="btn btn-danger">@ViewData["ErrorMesageAdd"]</span>
-                    }
+                    }*@
                 </form>
             </div>
         </div>
     </div>
 </div>
 <div class="row p-0">
-    <div class="col-md-8 col-12">
+    <div class="col-md-6 col-12">
         <h5 class="card-header bg-transparent text-uppercase">Danh sách</h5>
         <div class="boxscroll card-body">
             <table class="table table-hover">
@@ -135,7 +135,7 @@
             </table>
         </div>
     </div>
-    <div class="col-md-4 col-12">
+    <div class="col-md-6 col-12">
         <div class="card">
             <h5 class="card-header bg-transparent text-uppercase">Chi tiết</h5>
             <form method="post" class="card-body boxscroll" asp-page-handler="edit">
@@ -143,13 +143,13 @@
                 <div class="mb-3 row">
                     <label for="name" class="col-sm-2 col-form-label">Tên<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
-                        <input asp-for="SettingAdd.Name" type="text" class="form-control" id="name">
+                        <input asp-for="SettingAdd.Name" required type="text" class="form-control" id="name">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="valueSet" class="col-sm-2 col-form-label">Giá trị<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
-                        <input asp-for="SettingAdd.Value" type="text" class="form-control" id="valueSet">
+                        <input asp-for="SettingAdd.Value" required type="text" class="form-control" id="valueSet">
                     </div>
                 </div>
                 <div class="mb-3 row">
@@ -159,31 +159,31 @@
                     </div>
                 </div>
                 @{
-                    //if (Model.SettingAdd.ParentId != null)
-                    //{
-                    //    <div class="mb-3 row">
-                    //        <label for="note" class="col-sm-2 col-form-label">Cài đặt cha<span class="text-danger">*</span></label>
-                    //        <div class="col-sm-10">
-                    //            @*<input type="number" hidden asp-for="GetCourse.Id" />*@
-                    //            <select class="form-select" asp-for="SettingAdd.ParentId" id="parentId">
-                    //                @{
-                    //                    foreach (var item in Model.ListAllSettings)
-                    //                    {
-                    //                        bool isSelect = (Model.SettingAdd.ParentId == item.Id);
-                    //                        if (isSelect)
-                    //                        {
-                    //                            <option selected id="@item.Id" value="@item.Id">@item.Name</option>
-                    //                        }
-                    //                        else
-                    //                        {
-                    //                            <option id="@item.Id" value="@item.Id">@item.Name</option>
-                    //                        }
-                    //                    }
-                    //                }
-                    //            </select>
-                    //        </div>
-                    //    </div>
-                    //}
+                    if (Model.SettingAdd != null && Model.SettingAdd.ParentId != null)
+                    {
+                        <div class="mb-3 row">
+                            <label for="note" class="col-sm-2 col-form-label">Cài đặt cha<span class="text-danger">*</span></label>
+                            <div class="col-sm-10">
+                                @*<input type="number" hidden asp-for="GetCourse.Id" />*@
+                                <select disabled class="form-select" asp-for="SettingAdd.ParentId" id="parentId">
+                                    @{
+                                        foreach (var item in Model.ListAllSettings)
+                                        {
+                                            bool isSelect = (Model.SettingAdd.ParentId == item.Id);
+                                            if (isSelect)
+                                            {
+                                                <option selected id="@item.Id" value="@item.Id">@item.Name</option>
+                                            }
+                                            else
+                                            {
+                                                <option id="@item.Id" value="@item.Id">@item.Name</option>
+                                            }
+                                        }
+                                    }
+                                </select>
+                            </div>
+                        </div>
+                    }
                 }
                 <div class="col"><input type="submit" value="Lưu" class="btn btn-primary px-3" id="fakeSaveBtn" /></div>
             </form>
