--- a/Web-Triolingo/wwwroot/css/site.css
+++ b/Web-Triolingo/wwwroot/css/site.css
@@ -16,9 +16,12 @@ html {
 body {
   margin-bottom: 60px;
 }
-.boxscroll{
-    overflow-y:auto;
+.boxscroll, .boxscroll1, .boxscroll12 {
+    overflow-y: auto;
 }
 .tr-selected {
     background: #e6f1f7 !important
+}
+.ck-editor {
+    width: 100% !important;
 }
