--- a/Web-Triolingo/Pages/Courses/CourseList.cshtml
+++ b/Web-Triolingo/Pages/Courses/CourseList.cshtml
@@ -129,7 +129,7 @@
                 <div class="col"><button type="button" class="btn btn-primary px-3" id="disabledMode">Hủy</button></div>
                 @*<div class="col"><button type="button" class="btn btn-primary px-3">Import</button></div>*@
                 <div class="col">
-                    <a asp-page="../Lessons/Index" asp-route-id="@(Model.course!=null&&Model.course.Id!=0?Model.course.Id:0)" class="btn btn-primary px-3" disabled="@Model.course==null">Các học phần</a>
+                    <a asp-page="../Units/ListAll" asp-route-id="@(Model.course!=null&&Model.course.Id!=0?Model.course.Id:0)" class="btn btn-primary px-3" disabled="@Model.course==null">Các học phần</a>
                 </div>
             </div>
         </div>
