--- a/Web-Triolingo/Pages/Units/ListAll.cshtml
+++ b/Web-Triolingo/Pages/Units/ListAll.cshtml
@@ -15,6 +15,7 @@
         <div class="offcanvas-body">
             <div>
                 <form asp-page-handler="add" method="post">
+                    <input type="text" hidden name="id" value="@Model.CourseId" />
                     <div class="form-group">
                         <label for="email">Tên</label>
                         <input type="text" required class="form-control" asp-for="UnitAdd.Name" id="name" placeholder="nhập tên" aria-describedby="emailHelp">
@@ -29,7 +30,7 @@
                     </div>
                     <div class="form-group">
                         <label for="value">Ghi chú</label>
-                        <input type="text" required class="form-control" asp-for="UnitAdd.Note" id="value" placeholder="nhập ghi chú">
+                        <input type="text" class="form-control" asp-for="UnitAdd.Note" id="value" placeholder="nhập ghi chú">
                     </div>
                     <button type="submit" class="btn btn-primary">Thêm</button>
                 </form>
@@ -59,8 +60,8 @@
                         {
                             <input type="text" hidden asp-for="@item.CourseId" />
                             int count = 1;
-                            <tr>
-                                <form method="post" asp-page-handler="update" id="update-@item.Id">
+                            <tr onclick="UpdateUnit(@item.Id)">
+                                <form method="post" asp-page-handler="editunit" id="update-@item.Id">
                                     <input type="hidden" value="@item.Id" name="id" />
                                 </form>
                                 <td>
@@ -108,4 +109,44 @@
             </table>
         </div>
     </div>
+    <div class="col-md-6 col-12">
+        <div class="card">
+            <h5 class="card-header bg-transparent text-uppercase">Chi tiết</h5>
+            <form method="post" class="card-body boxscroll" asp-page-handler="edit">
+                <input type="number" hidden asp-for="UnitAdd.Id" />
+                <input type="number" hidden asp-for="UnitAdd.CourseId" />
+                <div class="mb-3 row">
+                    <label for="name" class="col-sm-2 col-form-label">Tên<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <input asp-for="UnitAdd.Name" required type="text" class="form-control" id="name">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="valueSet" class="col-sm-2 col-form-label">Thứ tự<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <input asp-for="UnitAdd.Order" required type="number" class="form-control" id="valueSet">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="note" class="col-sm-2 col-form-label">Ghi chú<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <textarea id="editor" class="form-control" asp-for="UnitAdd.Note"></textarea>
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="note" class="col-sm-2 col-form-label">Mô tả<span class="text-danger">*</span></label>
+                    <div class="col-sm-10">
+                        <textarea id="editor" class="form-control" asp-for="UnitAdd.Description"></textarea>
+                    </div>
+                </div>
+                <div class="col"><input type="submit" value="Lưu" class="btn btn-primary px-3" id="fakeSaveBtn" /></div>
+            </form>
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript">
+    function UpdateUnit(id) {
+        $('#update-' + id).submit()
+    }
+</script>
