--- a/Web-Triolingo/Pages/Settings/SettingList.cshtml
+++ b/Web-Triolingo/Pages/Settings/SettingList.cshtml
@@ -5,10 +5,10 @@
 <h1>Quản lý cài đặt</h1>
 
 <div class="">
-    <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+    <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#addNew" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
         Thêm mới
     </a>
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="addNew" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasExampleLabel">Thêm mới</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -18,15 +18,15 @@
                 <form asp-page-handler="add" method="post">
                     <div class="form-group">
                         <label for="email">Tên</label>
-                        <input type="text" required class="form-control" asp-for="SettingAdd.Name" id="name" placeholder="nhập tên" aria-describedby="emailHelp">
+                        <input type="text" required class="form-control" value="@Model.SettingAdd?.Name" asp-for="SettingAdd.Name" id="name" placeholder="nhập tên" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
                         <label for="value">Giá trị</label>
-                        <input type="text" required class="form-control" asp-for="SettingAdd.Value" id="value" placeholder="nhập giá trị">
+                        <input type="text" required class="form-control" value="@Model.SettingAdd?.Value" asp-for="SettingAdd.Value" id="value" placeholder="nhập giá trị">
                     </div>
                     <div class="form-group">
                         <label for="note">Ghi chú</label>
-                        <input type="text" class="form-control" id="note" asp-for="SettingAdd.Note" placeholder="nhập ghi chú">
+                        <input type="text" class="form-control" id="note" value="@Model.SettingAdd?.Note" asp-for="SettingAdd.Note" placeholder="nhập ghi chú">
                     </div>
 
                     <div class="form-check">
@@ -45,10 +45,7 @@
                     </select>
                     <br />
                     <button type="submit" class="btn btn-primary">Thêm</button>
-                    @*@if (ViewData["ErrorMesageAdd"] != null)
-                    {
-                        <span class="btn btn-danger">@ViewData["ErrorMesageAdd"]</span>
-                    }*@
+                    <label class="text-danger">@ViewData["AddFailed"]</label>
                 </form>
             </div>
         </div>
@@ -186,6 +183,7 @@
                     }
                 }
                 <div class="col"><input type="submit" value="Lưu" class="btn btn-primary px-3" id="fakeSaveBtn" /></div>
+                <label class="text-danger">@ViewData["UpdateFaild"]</label>
             </form>
         </div>
     </div>
@@ -195,4 +193,13 @@
 }
 @section scripts{
     <script src="~/js/settings/settings.js"></script>
+}
+@{
+    if (ViewData["AddFailed"] != null) {
+        <script>
+            window.onload = function () {
+                $('#addNew').addClass('show')
+            }
+        </script>
+    }
 }
